Tilføjet dokumentation for JavaFX i Javadoc format.